upgrade spring ai to 1.0.0-SNAPSHOT